--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,11 @@ bin-release/
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
+/ShoesProject/Debug
+/ShoesProject/ShoesProject/Debug
+/ShoesProject/ShoesProject/include
+/ShoesProject/ShoesProject/Lib
+/ShoesProject/ShoesProject/res
+/ShoesProject/ShoesProject/x64/Debug
+/ShoesProject/x64/Debug
+/.vs
