18/06/2024 - Add functions: open folder, load folder, load file, open file, load image

--- a/ShoesProject/ShoesProject/ShoesProject.vcxproj
+++ b/ShoesProject/ShoesProject/ShoesProject.vcxproj
@@ -207,6 +207,7 @@
     </ClCompile>
     <ClCompile Include="ShoesProject.cpp" />
     <ClCompile Include="ShoesProjectDlg.cpp" />
+    <ClCompile Include="SupportFunctions.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="ShoesProject.rc" />
