--- a/ShoesProject/ShoesProject/ShoesProject.vcxproj.filters
+++ b/ShoesProject/ShoesProject/ShoesProject.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClCompile Include="FolderDlg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SupportFunctions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="ShoesProject.rc">
